Tutoria 2 - Profesores, Cursos, lecciones y clases

--- a/music_school_angel/i18n/es.po
+++ b/music_school_angel/i18n/es.po
@@ -6,14 +6,29 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 18.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-30 21:53+0000\n"
-"PO-Revision-Date: 2025-05-30 21:53+0000\n"
+"POT-Creation-Date: 2025-06-02 20:53+0000\n"
+"PO-Revision-Date: 2025-06-02 20:53+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+
+#. module: music_school_angel
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_course_view_form
+msgid "Action Draft"
+msgstr "Acción Borrador"
+
+#. module: music_school_angel
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_course_view_form
+msgid "Action Finish"
+msgstr "Acción Finalizado"
+
+#. module: music_school_angel
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_course_view_form
+msgid "Action In Progress"
+msgstr "Acción en Progreso"
 
 #. module: music_school_angel
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__active
@@ -26,9 +41,19 @@ msgid "Additional notes about the student"
 msgstr "Notas adicionales sobre el estudiante"
 
 #. module: music_school_angel
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_course__level__advanced
+msgid "Advanced"
+msgstr "Avanzado"
+
+#. module: music_school_angel
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__age
 msgid "Age"
 msgstr "Edad"
+
+#. module: music_school_angel
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_course__level__beginner
+msgid "Beginner"
+msgstr "Novato"
 
 #. module: music_school_angel
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__birthdate
@@ -36,9 +61,75 @@ msgid "Birthdate"
 msgstr "Fecha de nacimiento"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__capacity
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__capacity
+msgid "Capacity"
+msgstr "Capacidad"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__classroom_id
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_classroom_view_form
+msgid "Classroom"
+msgstr "Clase"
+
+#. module: music_school_angel
+#: model:ir.model.fields,help:music_school_angel.field_music_school_lesson__classroom_id
+msgid "Classroom where the lesson is teached."
+msgstr "Clase donde se imparte la lección"
+
+#. module: music_school_angel
+#: model:ir.actions.act_window,name:music_school_angel.music_school_classroom_action
+#: model:ir.model,name:music_school_angel.model_music_school_classroom
+#: model:ir.ui.menu,name:music_school_angel.music_school_classroom_menu
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_classroom_view_form
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_classroom_view_list
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_lesson_view_form
+msgid "Classrooms"
+msgstr "Clases"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__course_id
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_course_view_form
+msgid "Course"
+msgstr "Cursos"
+
+#. module: music_school_angel
+#: model:ir.model.fields,help:music_school_angel.field_music_school_lesson__course_id
+msgid "Course of this lesson"
+msgstr "Curso de la lección"
+
+#. module: music_school_angel
+#: model:ir.actions.act_window,name:music_school_angel.music_school_course_action
+#: model:ir.model,name:music_school_angel.model_music_school_course
+#: model:ir.ui.menu,name:music_school_angel.music_school_course_menu
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_course_view_list
+msgid "Courses"
+msgstr "Cursos"
+
+#. module: music_school_angel
+#: model_terms:ir.actions.act_window,help:music_school_angel.music_school_classroom_action
+msgid "Create your first classroom"
+msgstr "Crea tu primera clase"
+
+#. module: music_school_angel
+#: model_terms:ir.actions.act_window,help:music_school_angel.music_school_course_action
+msgid "Create your first course"
+msgstr "Crea tu primer curso"
+
+#. module: music_school_angel
 #: model_terms:ir.actions.act_window,help:music_school_angel.music_school_instrument_action
 msgid "Create your first instrument"
 msgstr "Crea tu primer instrumento"
+
+#. module: music_school_angel
+#: model_terms:ir.actions.act_window,help:music_school_angel.music_school_lesson_action
+msgid "Create your first lesson"
+msgstr "Crea tu primera lección"
+
+#. module: music_school_angel
+#: model_terms:ir.actions.act_window,help:music_school_angel.music_school_professor_action
+msgid "Create your first professor"
+msgstr "Crea tu primer profesor"
 
 #. module: music_school_angel
 #: model_terms:ir.actions.act_window,help:music_school_angel.music_school_student_action
@@ -46,38 +137,63 @@ msgid "Create your first student"
 msgstr "Crea tu primer estudiante"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__create_uid
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__create_uid
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__create_uid
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__create_uid
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__create_uid
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__create_uid
 msgid "Created by"
 msgstr "Creado por"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__create_date
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__create_date
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__create_date
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__create_date
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__create_date
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__create_date
 msgid "Created on"
 msgstr "Creado el"
 
 #. module: music_school_angel
-#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_instrument__family__cuerda
-msgid "Cuerda"
-msgstr ""
-
-#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__description
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__description
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_course_view_form
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_instrument_view_form
 msgid "Description"
 msgstr "Descripción"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__display_name
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__display_name
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__display_name
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__display_name
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__display_name
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__display_name
 msgid "Display Name"
 msgstr "Nombre para mostrar"
 
 #. module: music_school_angel
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_course__state__draft
+msgid "Draft"
+msgstr "Borrador"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__duration
+msgid "Duration (minutes)"
+msgstr "Duración (minutos)"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__email
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__email
 msgid "Email"
 msgstr "Correo electrónico"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__end_date
+msgid "End Date"
+msgstr "Fecha fin"
 
 #. module: music_school_angel
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__family
@@ -85,29 +201,58 @@ msgid "Family"
 msgstr "Familia"
 
 #. module: music_school_angel
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_course__state__finished
+msgid "Finished"
+msgstr "Finalizado"
+
+#. module: music_school_angel
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_student_view_form
 msgid "Generate reference"
-msgstr ""
+msgstr "Generar referencia"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__id
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__id
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__id
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__id
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__id
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: music_school_angel
-#: model:ir.ui.menu,name:music_school_angel.music_school_instrument_menu
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_course__state__progress
+msgid "In progress"
+msgstr "En progreso"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__instrument_id
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_instrument_view_form
 msgid "Instrument"
 msgstr "Instrumento"
 
 #. module: music_school_angel
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_instrument_view_form
+msgid "Instrument Maintenance"
+msgstr "Mantenimiento del instrumento"
+
+#. module: music_school_angel
+#: model:ir.model.fields,help:music_school_angel.field_music_school_course__instrument_id
+msgid "Instrument of the course"
+msgstr "Instrumento del curso"
+
+#. module: music_school_angel
 #: model:ir.actions.act_window,name:music_school_angel.music_school_instrument_action
 #: model:ir.model,name:music_school_angel.model_music_school_instrument
-#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_instrument_view_form
+#: model:ir.ui.menu,name:music_school_angel.music_school_instrument_menu
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_instrument_view_list
 msgid "Instruments"
 msgstr "Instrumentos"
+
+#. module: music_school_angel
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_course__level__intermediate
+msgid "Intermediate"
+msgstr "Intermedio"
 
 #. module: music_school_angel
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__last_maintenance
@@ -115,16 +260,41 @@ msgid "Last Maintenance"
 msgstr "Último mantenimiento"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__write_uid
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__write_uid
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__write_uid
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__write_uid
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__write_uid
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__write_uid
 msgid "Last Updated by"
 msgstr "Última actualización por"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__write_date
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__write_date
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__write_date
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__write_date
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__write_date
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__write_date
 msgid "Last Updated on"
 msgstr "Última actualización el"
+
+#. module: music_school_angel
+#: model:ir.model,name:music_school_angel.model_music_school_lesson
+#: model:ir.ui.menu,name:music_school_angel.music_school_lesson_menu
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_lesson_view_list
+msgid "Lessons"
+msgstr "Lecciones"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__level
+msgid "Level"
+msgstr "Nivel"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__location
+msgid "Location"
+msgstr "Ubicación"
 
 #. module: music_school_angel
 #: model:res.groups,name:music_school_angel.group_music_school_manager
@@ -143,31 +313,63 @@ msgid "Music School"
 msgstr "Escuela de Música"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_classroom__name
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__name
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_instrument__name
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__name
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__name
 msgid "Name"
 msgstr "Nombre"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__notes
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__notes
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_lesson_view_form
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_student_view_form
 msgid "Notes"
 msgstr "Notas"
 
 #. module: music_school_angel
-#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_instrument__family__percusion
-msgid "Percusión"
-msgstr ""
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_instrument__family__percussion
+msgid "Percussion"
+msgstr "Percusión"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_professor__phone
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__phone
 msgid "Phone"
 msgstr "Teléfono"
 
 #. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__professor_id
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__professor_id
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_professor_view_form
+msgid "Professor"
+msgstr "Profesor"
+
+#. module: music_school_angel
+#: model:ir.model.fields,help:music_school_angel.field_music_school_course__professor_id
+msgid "Professor of this course"
+msgstr "Profesor del curso"
+
+#. module: music_school_angel
+#: model:ir.model.fields,help:music_school_angel.field_music_school_lesson__professor_id
+msgid "Professor who teaches this lesson"
+msgstr "Profes que imparte la lección"
+
+#. module: music_school_angel
+#: model:ir.actions.act_window,name:music_school_angel.music_school_professor_action
+#: model:ir.model,name:music_school_angel.model_music_school_professor
+#: model:ir.ui.menu,name:music_school_angel.music_school_professor_menu
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_professor_view_form
+#: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_professor_view_list
+msgid "Professors"
+msgstr "Profesores"
+
+#. module: music_school_angel
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__reference
 msgid "Reference"
-msgstr ""
+msgstr "Referencia"
 
 #. module: music_school_angel
 #: model:ir.model.fields,field_description:music_school_angel.field_music_school_student__user_id
@@ -180,14 +382,35 @@ msgid "Responsible user for this student"
 msgstr "Usuario responsable de este estudiante"
 
 #. module: music_school_angel
-#: model:ir.ui.menu,name:music_school_angel.music_school_student_menu
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__start_date
+msgid "Start Date"
+msgstr "Fecha inicio"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_lesson__start_datetime
+msgid "Start DateTime"
+msgstr "Fecha y hora inicio"
+
+#. module: music_school_angel
+#: model:ir.model.fields,field_description:music_school_angel.field_music_school_course__state
+msgid "State"
+msgstr "Estado"
+
+#. module: music_school_angel
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_instrument__family__string
+msgid "String"
+msgstr "Cuerda"
+
+#. module: music_school_angel
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_student_view_form
 msgid "Student"
 msgstr "Estudiante"
 
 #. module: music_school_angel
+#: model:ir.actions.act_window,name:music_school_angel.music_school_lesson_action
 #: model:ir.actions.act_window,name:music_school_angel.music_school_student_action
 #: model:ir.model,name:music_school_angel.model_music_school_student
+#: model:ir.ui.menu,name:music_school_angel.music_school_student_menu
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_student_view_form
 #: model_terms:ir.ui.view,arch_db:music_school_angel.music_school_student_view_list
 msgid "Students"
@@ -209,6 +432,6 @@ msgid "User"
 msgstr "Usuario"
 
 #. module: music_school_angel
-#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_instrument__family__viento
-msgid "Viento"
-msgstr ""
+#: model:ir.model.fields.selection,name:music_school_angel.selection__music_school_instrument__family__wind
+msgid "Wind"
+msgstr "Viento"
